# qphase

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  DEVELOPMENT.md  Gemfile  LICENSE  README.md  _config.yml  index.html  mkdocs.yml  plan.md  plan_next.md  pyproject.toml  requirements.txt  sitemap.xml  test.ipynb
.github/workflows/: ci.yml  deploy-docs.yml  docs.yml  publish.yml  pypi-manual.yml  release.yml
api/: index.html
api/cli/: index.html
api/core/: index.html
api/qphase_sde/: index.html
api/sde/: index.html
configs/: global.yaml  vdp_psd.yaml  vdp_run.yaml
configs/jobs/: article_fig_1.yaml  cpu_smoke_kerr_2mode.yaml  cpu_smoke_kerr_2mode_fit.yaml  cpu_smoke_kerr_3pa.yaml  cpu_smoke_kerr_3pa_fit.yaml  kerr_2mode.yaml  kerr_2mode_cayley.yaml  kerr_3mode.yaml  kerr_3pa.yaml  vdp_2mode.yaml  vdp_2mode_auto.yaml  vdp_2mode_cayley.yaml  vdp_2mode_cupy.yaml  vdp_2mode_psd.yaml  vdp_2mode_smoke.yaml  vdp_dist.yaml  vdp_psd.yaml  vdp_sde.yaml  vdp_viz.yaml
dev_guide/: index.html
dev_guide/architecture/: index.html
dev_guide/backend/: index.html
dev_guide/cli/: index.html
dev_guide/configuration/: index.html
dev_guide/error_handling/: index.html
dev_guide/faq/: index.html
dev_guide/plugin_development/: index.html
dev_guide/postprocess/: index.html
dev_guide/protocols/: index.html
dev_guide/registry/: index.html
dev_guide/scheduler/: index.html
dev_guide/service_layer/: index.html
docs/: Gemfile  MIGRATION_TO_GITHUB_PAGES.md  _config.yml  config_spec_en.md  config_spec_en_v2.md  config_spec_zh.md  guide_en.md  guide_zh.md  index.md  index.zh.md  protocols.md
docs/_layouts/: default.html
docs/api/: cli.md  cli.zh.md  core.md  core.zh.md  index.md  index.zh.md  sde.md  sde.zh.md
docs/dev_guide/: architecture.md  architecture.zh.md  backend.md  backend.zh.md  cli.md  cli.zh.md  configuration.md  configuration.zh.md  error_handling.md  error_handling.zh.md  faq.md  faq.zh.md  index.md  index.zh.md  plugin_development.md  plugin_development.zh.md  postprocess.md  postprocess.zh.md  protocols.md  protocols.zh.md  registry.md  registry.zh.md  scheduler.md  scheduler.zh.md  service_layer.md  service_layer.zh.md
docs/ecosystem/: plugin_development.md
docs/user_guide/: cli.md  configuration.md  configuration.zh.md  getting_started.md  getting_started.zh.md  gui.md  gui.zh.md  index.md  installation.md  output.md  output.zh.md  quick_start.md  sde_modeling.md  sde_simulation.md
javascripts/: mathjax.js
models/: .qphase_plugins.yaml  __init__.py  _cupy_kerr_3mode.py  _cupy_vdp_2mode.py  base.py  kerr_2mode.py  kerr_3mode.py  kerr_3pa.py  kerr_cavity.py  vdp_2mode.py  vdp_level2.py  vdp_level3.py  vdp_two_mode.py
models/kernels/: __init__.py  base.py  cupy_utils.py
reports/: cayley_chunk_benchmark.md  cayley_validation.md  cupy_overhead_diagnosis.md
search/: search_index.json
tests/: conftest.py  run_cli_sweep_cartesian.py  run_cli_sweep_strdsl_cartesian.py  run_cli_sweep_strdsl_zipped.py  run_cli_sweep_zipped.py  test_cli_commands.py  test_decentralized.py  test_engine_config.py  test_job_sde.yaml  test_job_viz.yaml  test_parameter_scan.py  test_scheduler_validation.py  tmp_cartesian.yaml  tmp_strdsl_cartesian.yaml  tmp_strdsl_zipped.yaml  tmp_zipped.yaml
tests/contracts/: test_core_protocols.py  test_numba_backend.py  test_registry_meta.py  test_visualizer_specs.py
tests/data/: test_job_sde.yaml  test_param_scan_cartesian.yaml  test_param_scan_zipped.yaml
tests/plugins/: dummy_plugin.py
tests/qphase/: conftest.py  test_backend_solve.py  test_batch_execution.py  test_batch_negotiator.py  test_cli_commands.py  test_config_contracts.py  test_config_loading.py  test_cpu_smoke.py  test_decentralized.py  test_engine_config.py  test_parameter_scan.py  test_parameter_scan_real_models.py  test_save_stride.py  test_scheduler_features.py  test_vdp_2mode_auto.py  (+2 more)
tmp_bench_1000/: cfg.yaml
tmp_bench_10000/: cfg.yaml
tmp_bench_100_10000/: cfg.yaml
tmp_bench_5000/: cfg.yaml
user_guide/: index.html
zh/: index.html
(+103 files in other folders)
